initial meta viewport, for a nice mobile view -- and change title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Basic example bog</title>
+    <title>Bogbook</title>
+    <meta name='viewport' content='width=device-width initial-scale=1' />
     <link rel='stylesheet' href='./css/source-sans-pro.min.css' />
     <link rel='stylesheet' href='./css/style.css' />
   </head>
