--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
   <script src="nacl.min.js"></script>
   <script src="nacl-util.min.js"></script>
+  <script src="localforage.min.js"></script>
   <script src="marked.min.js"></script>
   <script src="lib.js"></script>
   <script src="app.js"></script>
