--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel='stylesheet' href='./css/style.css' />
   </head>
   <body>
-  <script src="nacl.min.js"></script>
-  <script src="nacl-util.min.js"></script>
-  <script src="localforage.min.js"></script>
-  <script src="marked.min.js"></script>
+  <script src="./lib/nacl.min.js"></script>
+  <script src="./lib/nacl-util.min.js"></script>
+  <script src="./lib/localforage.min.js"></script>
+  <script src="./lib/marked.min.js"></script>
   <script src="lib.js"></script>
+  <script src="render.js"></script>
   <script src="app.js"></script>
   </body>
 </html>
