--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="./lib/localforage.min.js"></script>
   <script src="./lib/marked.min.js"></script>
   <script src="lib.js"></script>
+  <script src="welcome.js"></script>
   <script src="render.js"></script>
   <script src="app.js"></script>
   </body>
