move some stuff around and try to get it to work

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="./lib/nacl-util.min.js"></script>
   <script src="./lib/localforage.min.js"></script>
   <script src="./lib/marked.min.js"></script>
+  <script src="./lib/misc.js"></script>
   <script src="lib.js"></script>
   <script src="welcome.js"></script>
   <script src="render.js"></script>
