--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
   <head>
     <title>Bogbook</title>
     <meta name='viewport' content='width=device-width initial-scale=1' />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel='stylesheet' href='./css/source-sans-pro.min.css' />
     <link rel='stylesheet' href='./css/style.css' />
+    <script src="./lib/nacl.min.js"></script>
+    <script src="./lib/nacl-util.min.js"></script>
+    <script src="./lib/localforage.min.js"></script>
+    <script src="./lib/marked.min.js"></script>
+    <script src="./lib/misc.js"></script>
+    <script async src="bog.js"></script>
+    <script async src="render.js"></script>
+    <script async src="views.js"></script>
+    <script async src="app.js"></script>
   </head>
   <body>
-  <script src="./lib/nacl.min.js"></script>
-  <script src="./lib/nacl-util.min.js"></script>
-  <script src="./lib/localforage.min.js"></script>
-  <script src="./lib/marked.min.js"></script>
-  <script src="./lib/misc.js"></script>
-  <script src="lib.js"></script>
-  <script src="welcome.js"></script>
-  <script src="render.js"></script>
-  <script src="app.js"></script>
   </body>
 </html>
