minor changes to make sure the app loads

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel='stylesheet' href='./css/source-sans-pro.min.css' />
     <link rel='stylesheet' href='./css/style.css' />
+ </head>
+  <body>
     <script src="./lib/nacl.min.js"></script>
     <script src="./lib/nacl-util.min.js"></script>
     <script src="./lib/localforage.min.js"></script>
     <script src="./lib/marked.min.js"></script>
     <script src="./lib/misc.js"></script>
-    <script async src="bog.js"></script>
-    <script async src="render.js"></script>
-    <script async src="views.js"></script>
-    <script async src="app.js"></script>
-  </head>
-  <body>
+    <script src="bog.js"></script>
+    <script src="render.js"></script>
+    <script src="views.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
