this isnt quite working yet, but commiting anyway

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./lib/marked.min.js"></script>
     <script src="./lib/misc.js"></script>
     <script src="bog.js"></script>
+    <script src="gossip.js"></script>
     <script src="render.js"></script>
     <script src="views.js"></script>
     <script src="app.js"></script>
