implement editable messages (for authors only)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <script src="./lib/nacl.min.js"></script>
     <script src="./lib/nacl-util.min.js"></script>
     <script src="./lib/localforage.min.js"></script>
+    <script src="./lib/diff.js"></script>
     <script src="./lib/marked.min.js"></script>
     <script src="./lib/misc.js"></script>
     <script src="bog.js"></script>
+    <script src="composer.js"></script>
     <script src="gossip.js"></script>
     <script src="render.js"></script>
     <script src="views.js"></script>
