first stab at secure bogbook (sbb)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <script src="./lib/nacl.min.js"></script>
     <script src="./lib/nacl-util.min.js"></script>
+    <script src="./lib/ed2curve.min.js"></script>
     <script src="./lib/localforage.min.js"></script>
     <script src="./lib/diff.js"></script>
     <script src="./lib/marked.min.js"></script>
