add profile photos that are cropped to 250 by 250 and saved to your log

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./lib/misc.js"></script>
     <script src="bog.js"></script>
     <script src="composer.js"></script>
+    <script src="identify.js"></script>
     <script src="gossip.js"></script>
     <script src="render.js"></script>
     <script src="views.js"></script>
