--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="bog.js"></script>
     <script src="composer.js"></script>
     <script src="settings.js"></script>
+    <script src="beacons.js"></script>
     <script src="identify.js"></script>
     <script src="render.js"></script>
     <script src="gossip.js"></script>
