swap lightning-fs for localforage -- wip

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel='stylesheet' href='./css/style.css' />
   </head>
   <body>
+    <script src="./lib/lightning-fs.min.js"></script>
     <script src="./lib/nacl.min.js"></script>
     <script src="./lib/nacl-util.min.js"></script>
     <script src="./lib/ed2curve.min.js"></script>
-    <script src="./lib/localforage.min.js"></script>
     <script src="./lib/diff.js"></script>
     <script src="./lib/marked.min.js"></script>
     <script src="./lib/misc.js"></script>
