add compose box

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Bogbook v2</title>
     <meta name='viewport' content='width=device-width initial-scale=1' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel='stylesheet' href='style.css' type='text/css' />
     <script src="./lib/localforage.min.js"></script>
     <script src="./lib/sha256.min.js"></script>
     <script src="./lib/nacl.min.js"></script>
@@ -10,6 +11,7 @@
     <script src="./lib/misc.js"></script>
     <script src="util.js"></script>
     <script src="app.js"></script>
+    <script src="render.js"></script>
   </head>
   <body>
   <noscript>This application requires JavaScript.</noscript>
