--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="./lib/nacl.min.js"></script>
     <script src="./lib/nacl-util.min.js"></script>
     <script src="./lib/misc.js"></script>
+    <script src="./lib/marked.min.js"></script>
     <script src="util.js"></script>
     <script src="app.js"></script>
-    <script src="render.js"></script>
   </head>
   <body>
   <noscript>This application requires JavaScript.</noscript>
