add source sans pro and render threads

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>Bogbook v2</title>
     <meta name='viewport' content='width=device-width initial-scale=1' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel='stylesheet' href='style.css' type='text/css' />
+    <link rel='stylesheet' href='./css/source-sans-pro.min.css' type='text/css' />
+    <link rel='stylesheet' href='./css/style.css' type='text/css' />
     <script src="./lib/localforage.min.js"></script>
     <script src="./lib/sha256.min.js"></script>
     <script src="./lib/nacl.min.js"></script>
