--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./lib/sha256.min.js"></script>
     <script src="./lib/nacl.min.js"></script>
     <script src="./lib/nacl-util.min.js"></script>
+    <script src="./lib/ed2curve.min.js"></script>
     <script src="./lib/misc.js"></script>
     <script src="./lib/marked.min.js"></script>
     <script src="util.js"></script>
