configure configurable things in app.js with a configuration file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Bogbook v2</title>
+    <title>Bogbook</title>
     <meta name='viewport' content='width=device-width initial-scale=1' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel='stylesheet' href='./css/source-sans-pro.min.css' type='text/css' />
@@ -14,9 +14,10 @@
     <script src="./lib/marked.min.js"></script>
     <script src="util.js"></script>
     <script src="app.js"></script>
+    <script src="config.js"></script>
   </head>
   <body>
-  <noscript>This application requires JavaScript.</noscript>
+  <noscript>This application requires JavaScript. Email ev@evbogue.com with questions.</noscript>
   </body>
 </html>
 
