--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="config.js"></script>
     <script src="util.js"></script>
     <script src="app.js"></script>
+    <script src="render.js"></script>
+    <script src="gossip.js"></script>
+    <script src="compose.js"></script>
   </head>
   <body>
   <noscript>This application requires JavaScript. Email ev@evbogue.com with questions.</noscript>
