prevent occasional race condition where scripts load before body

--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <link rel='stylesheet' href='./css/source-sans-pro.min.css' type='text/css' />
     <link rel='stylesheet' href='./css/structure.css' type='text/css' />
     <link rel='stylesheet' href='./css/custom.css' type='text/css' />
-    <script src="./lib/localforage.min.js"></script>
-    <script src="./lib/sha256.min.js"></script>
-    <script src="./lib/nacl.min.js"></script>
-    <script src="./lib/nacl-util.min.js"></script>
-    <script src="./lib/ed2curve.min.js"></script>
-    <script src="./lib/misc.js"></script>
-    <script src="./lib/marked.min.js"></script>
-    <script src="config.js"></script>
-    <script src="util.js"></script>
-    <script src="app.js"></script>
-    <script src="render.js"></script>
-    <script src="gossip.js"></script>
-    <script src="compose.js"></script>
-  </head>
+</head>
   <body>
-  <noscript>This application requires JavaScript. Email ev@evbogue.com with questions.</noscript>
+    <noscript>This application requires JavaScript. Email ev@evbogue.com with questions.</noscript>
   </body>
+  <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+  <script src="./lib/localforage.min.js"></script>
+  <script src="./lib/sha256.min.js"></script>
+  <script src="./lib/nacl.min.js"></script>
+  <script src="./lib/nacl-util.min.js"></script>
+  <script src="./lib/ed2curve.min.js"></script>
+  <script src="./lib/misc.js"></script>
+  <script src="./lib/marked.min.js"></script>
+  <script src="config.js"></script>
+  <script src="util.js"></script>
+  <script src="render.js"></script>
+  <script src="gossip.js"></script>
+  <script src="compose.js"></script>
+  <script src="app.js"></script>
 </html>
 
