switch from localforage to idb-kv-store

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <noscript>This application requires JavaScript. Email ev@evbogue.com with questions.</noscript>
   </body>
   <script src="./lib/localforage.min.js"></script>
+  <script src="./lib/idbkvstore.min.js"></script>
   <script src="./lib/sha256.min.js"></script>
   <script src="./lib/nacl.min.js"></script>
   <script src="./lib/nacl-util.min.js"></script>
@@ -20,7 +21,6 @@
   <script src="config.js"></script>
   <script src="util.js"></script>
   <script src="render.js"></script>
-  <script src="gossip.js"></script>
   <script src="app.js"></script>
   <script src="compose.js"></script>
 </html>
