--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="./lib/nacl.min.js"></script>
   <script src="./lib/nacl-util.min.js"></script>
   <script src="./lib/ed2curve.min.js"></script>
+  <script src="./lib/lightweight-charts.standalone.production.js"></script>
   <script src="./lib/misc.js"></script>
   <script src="./lib/marked.min.js"></script>
   <script src="config.js"></script>
